# cortex-vision

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PERFORMANCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-staging.yml
deploy/: Caddyfile  docker-compose.staging.yml  grafana-dashboard.json  prometheus-alerts.yml
scripts/: run.sh
src/: __init__.py  cache.py  cli.py  config.py  detector.py  main.py  middleware.py  pipeline.py  profiling.py  resilience.py  services.py  utils.py
static/: index.html
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_cli.py  test_detector.py  test_pipeline.py  test_services.py  test_utils.py
tests/contract/: test_contract.py
tests/edge/: test_edge.py
tests/fault/: test_resilience.py
tests/integration/: test_api.py
tests/mutation/: README.md
tests/performance/: test_bench.py
tests/property/: test_property.py
tests/regression/: test_known_bugs.py
tests/smoke/: test_smoke.py
tests/unit/: test_profiling.py  test_routes.py  test_services.py  test_utils.py
